[gd_scene load_steps=8 format=3 uid="uid://d2wvaagg3f6x1"]

[ext_resource type="PackedScene" uid="uid://h338mixqwcp5" path="res://src/animations/scenes/base_video.tscn" id="1_1vfkl"]
[ext_resource type="Script" path="res://src/animations/scenes/intro.gd" id="1_hyth7"]
[ext_resource type="VideoStream" path="res://src/animations/assets/intro.ogv" id="3_br0aa"]

[sub_resource type="LabelSettings" id="LabelSettings_cmbrh"]
font_size = 111
font_color = Color(0, 0, 0.796078, 1)
outline_size = 60
outline_color = Color(0.854902, 0.898039, 0.886275, 1)

[sub_resource type="Animation" id="Animation_qm7cf"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_pcsgl"]
resource_name = "gui_fade"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_tjjb0"]
_data = {
"RESET": SubResource("Animation_qm7cf"),
"gui_fade": SubResource("Animation_pcsgl")
}

[node name="Intro" type="AspectRatioContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
ratio = 1.7778
script = ExtResource("1_hyth7")

[node name="IntroVideo" parent="." instance=ExtResource("1_1vfkl")]
layout_mode = 2
video = ExtResource("3_br0aa")

[node name="GUI" type="ColorRect" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="GUI"]
layout_mode = 0
offset_left = 347.0
offset_top = 123.993
offset_right = 1614.0
offset_bottom = 898.993
text = "Welcome to Foley VR!

This text is placeholder.

Press B to enter world."
label_settings = SubResource("LabelSettings_cmbrh")

[node name="FadeRectangle" type="ColorRect" parent="."]
visible = false
layout_mode = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_tjjb0")
}

[connection signal="finished" from="IntroVideo" to="." method="_on_intro_video_finished"]
